scrollbar issues adjusted

--- a/assets/properties.css
+++ b/assets/properties.css
@@ -13,41 +13,24 @@ body{
      flex:1;
    }
 
+   /*
 .row{
     height: 100%;
     overflow-y: scroll;
     overflow-x: hidden;
-    -ms-overflow-style: none; 
-    scrollbar-width: none; 
 }
-
-.row::-webkit-scrollbar {
-    display: none;
-  }
 
 .col{
     height: 100%;
     overflow-y: scroll;
     overflow-x: hidden;
-    -ms-overflow-style: none; 
-    scrollbar-width: none; 
 }
-
-.col::-webkit-scrollbar {
-    display: none;
-  }
 
 .div{
     height: 100%;
     overflow-y: scroll;
     overflow-x: hidden;
-    -ms-overflow-style: none; 
-    scrollbar-width: none; 
-}
-
-.div::-webkit-scrollbar {
-    display: none;
-  }
+}*/
 
 P{
     margin: 0;
